--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/duck.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stacked Stocks</title>
+    <title>MockStocks</title>
   </head>
   <body>
     <div id="root"></div>
